kubernetes/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: default
spec:
  selector:
    app: numeric-counter
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
