kubernetes/numeric-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: numeric-service
  namespace: default
spec:
  selector:
    app: numeric-counter
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
