kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: numeric-counter
spec:
  rules:
  - host: numeric-counter.__INGRESS_IP__.nip.io
    http:
      paths:
      - backend:
          service:
            name: solar-system
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - numeric-counter.__INGRESS_IP__.nip.io
    secretName: ingress-local-tls
